# CMake Minimum version
cmake_minimum_required(VERSION 3.10)

# Project name
project(xkblas-kernels)

# option(BLA_STATIC "Enable static linkage with BLAS" ON)
# find_package(BLAS REQUIRED)
# if(BLAS_FOUND)
#     message(STATUS "BLAS found - ${BLAS_LIBRARIES}")
# else()
#     message(WARNING "BLAS not found")
# endif(BLAS_FOUND)

# FIND BLAS
if (USE_MKL)
    message(STATUS "MKLROOT=$ENV{MKLROOT}")
    if(DEFINED ENV{MKLROOT})
        message(STATUS "MKLROOT=[$ENV{MKLROOT}]")
    else()
        message(FATAL_ERROR "`USE_MKL` is set but `MKLROOT` is unset")
    endif()
    set(BLA_VENDOR Intel10_64lp_seq)
    add_compile_options("-DUSE_MKL=1")
    add_compile_options("-DMKL_ILP64")
    add_compile_options("-m64")
endif()
if (USE_CRAYBLAS)
    set(BLA_VENDOR Generic)
    add_compile_options("-DUSE_CRAYBLAS=1")
endif()
if (USE_OPENBLAS)
    set(BLA_VENDOR OpenBLAS)
    add_compile_options("-DUSE_OPENBLAS=1")
endif()
if (USE_NVHPC)
    set(BLA_VENDOR NVHPC)
    add_compile_options("-DUSE_NVHPC=1")
endif()

if (NOT USE_MKL AND NOT USE_OPENBLAS AND NOT USE_CRAYBLAS)
    # message(FATAL_ERROR "XKblas tests requires you specify a BLAS Vendor library.")
    add_compile_options("-DNO_CPU_BLAS=1")
endif()

find_package(BLAS)
if (${BLAS_FOUND})
    message(STATUS "Found BLAS library.")
else()
    add_compile_options("-DNO_CPU_BLAS=1")
    message(STATUS "Testing correctness requires a BLAS library, and none were found.")
    set(BLAS_INCLUDE_DIRS "")
    set(BLAS_LIBRARIES_DIRS "")
endif()

if (USE_MKL)
    find_path(BLAS_INCLUDE_DIRS mkl_lapacke.h $ENV{MKLROOT}/include)
endif()
if (USE_CRAYBLAS)
    find_path(BLAS_INCLUDE_DIRS lapacke.h ${CRAY_LIBSCI_PREFIX_DIR}/include)
endif()
if (USE_OPENBLAS)
    find_path(BLAS_INCLUDE_DIRS lapacke.h)
endif()

include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${BLAS_INCLUDE_DIRS})
add_executable(xkblas-kernels common/main.cc)
target_link_libraries(xkblas-kernels ${XKBLAS_NAME} ${BLAS_LIBRARIES} XKRT::xkrt)

if (USE_CUDA)
    target_link_libraries(xkblas-kernels ${XKBLAS_NAME}_kernels_cuda ${CUDA_DRIVER_LIBRARIES})
endif()

if (USE_SYCL)
    target_link_libraries(xkblas-kernels sycl -fsycl -qmkl=parallel)
endif()
